--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^5.0.1",
-    "node-sass": "^6.0.0",
+    "json-server": "^0.16.3",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
@@ -27,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch public/db.json --port=3001"
   },
   "eslintConfig": {
     "extends": [
